tests/NormalTests/paczka1/small_fuzzy/69249593.err
Error in line 2: KVjR7GBnZg9 S420 75,6
Error in line 3: KVjR7GBnZg9 A903 5,7
Error in line 4: QqGVx96 S259 21,4
